--- a/src/Contact.css
+++ b/src/Contact.css
@@ -6,6 +6,12 @@
 }
 .u-form-group input {
   background-color: #f5f5f5;
+
+}
+.u-form-group input:focus {
+  outline: none !important;
+  border:2px solid #ddd;
+  box-shadow: none;
 }
 .u-section-1 .u-sheet-1 {
   /* min-height: 988px; */
@@ -69,9 +75,12 @@
 
 .u-section-1 .u-image-1 {
   min-height: 400px;
-  background-image: url("assets/img/contactPage.webp");
-  background-position: 75% 50%;
+  background-image: url("assets/img/contactPage3.webp");
+  background-size: contain;
+  background-position: center;
+  background-position: 50% 50%;
   border-radius: 8px !important;
+
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -253,4 +262,12 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+}
+.contact-submit-text{
+  
+  /* padding: 30px; */
+  padding-top: 0;
+  font-size: 0.875rem;
+  font-weight: 400;
+  text-align:  center !important;
 }
