--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1237,6 +1237,10 @@ section {
   background-image: url("../../assets/img/footer/zomato-logo.svg");
   background-position: center center;
 }
+.footer .zomata:after{
+    display:none;
+    content: url('../../assets/img/footer/zomato-logo2.svg')
+}
 .footer .zomato:hover {
   background-image: url("../../assets/img/footer/zomato-logo2.svg");
   background-position: center center;
@@ -1364,9 +1368,9 @@ section {
   border-radius: 10px;
   background: #fff;
   padding: 20px 35px 20px 25px;
-  border-left: 4px solid #82a918;
-  border-top: 4px solid #82a918;
-  border-right: 4px solid #82a918;
+  border: 4px solid #82a918;
+  /* border-top: 4px solid #82a918;
+  border-right: 4px solid #82a918; */
   overflow: hidden;
   /* transform: translateX(calc(100% + 30px)); */
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.35) ease-in-out;
@@ -1374,10 +1378,34 @@ section {
 @media screen and (max-width: 576px) {
   .toast{
     width: 86% !important;
+    padding: 10px 18px 10px 12px;
+  }
+  .aboutNew h1{
+    font-weight: 900;
+    font-size: 2.0rem !important;
+  }
+  .what-get h2{
+    font-size: 2.0rem !important;
+    font-weight: 900 !important;
+    letter-spacing: -1px !important;
+    margin-bottom: 3.5rem !important;
+
+  }
+  .chefs h2 {
+    font-size: 2.0rem !important;
+    font-weight: 900 !important;
+    letter-spacing: -1px !important;
+    margin-bottom: 3.5rem !important;
+  }
+  .why-us h2 {
+    font-size: 2.0rem !important;
+    font-weight: 900 !important;
+    letter-spacing: -1px !important;
+    margin-bottom: 3.5rem !important;
   }
 }
   
-}
+
 .toast.active{
   transform: translateX(0%);
 }
